Primarily added a 'Clear the Form' button, but several other things: * Removed the bootstrap selectpicker, which didn't really work w/ angularjs and resulting in not being able to programmatically modify the select box values (a problem for clearing the form) * Fully angularjs-ized the app.  There were several hacks to deal w/ the select picker incompatibility. * Bootstrap itself is somewhat incompatible w/ Angularjs, however, there is a angular plugin that creates all the same display classes that Bootstrap uses, so I switched it w/o issue. * Removed a lot of extra padding around the form * Added a 'Your records are blocked' message is the filter prevents records from showing.

--- a/glri-catalog-ui/src/main/webapp/css/custom.css
+++ b/glri-catalog-ui/src/main/webapp/css/custom.css
@@ -10,8 +10,31 @@ ul#ccsa-area {
 
 .sub-title img {width: 200px; height: 66px; }
 
-#sb-query-form .submit-button { margin-top: 10px; }
+#title-header { padding-top: .2em; padding-bottom: .2em; }
 
+#sb-query-form .form-group {
+	margin-bottom: .7em;
+}
+#sb-query-form .form-group label.col-xs-4 { padding: 0 .2em 0 .2em; }
+#sb-query-form .form-group .col-xs-8 { padding-left: .2em; }
+
+
+#sb-query-form .well { padding: .6em; }
+
+#sb-query-form .map-contols { padding: .6em; text-align: center; }
+
+#sb-query-form-footer-controls { margin-top: .5em; }
+
+#sb-query-submit { padding-left: 3em; padding-right: 3em; }
+
+#records-blocked-by-filter {
+	margin: 10% auto;
+	width: 70%;
+}
+
+#records-blocked-by-filter.no-records {
+	display: block;
+}
 th a {
   color: #000 !important;
 }
@@ -124,3 +147,13 @@ ul.result-records .related-links {
 
 #resource_input img {width: 1.8em; height: 1.8em; margin-top: -3px; /* Makes up for button padding */ }
 
+/* Modify basic spacing */
+.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
+  padding-right: .4em; padding-left: .4em;
+}
+
+.row { margin-right: -.4em; margin-left: -.4em; }
+
+.form-horizontal .form-group { margin-right: -.4em; margin-left: -.4em; }
+
+.well { margin-bottom: .8em; }
